--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com
 spring.datasource.username=postgres.xehsxngnbogmbgpqanal
 spring.datasource.password=sqPXTQXvyQv4dPbw
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet=DEBUG
