some minor bugs

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,20 @@ buildscript {
         classpath 'org.postgresql:postgresql:42.2.23'
     }
 }
-// ...existing code...
-// implementation 'mysql:mysql-connector-java:8.0.26'
-implementation 'org.postgresql:postgresql:42.2.23'
+
+plugins {
+    id 'java'
+    // ...existing code...
+}
+
+repositories {
+    // ...existing code...
+}
+
+dependencies {
+    implementation 'org.postgresql:postgresql:42.2.23'
+    // Add the implementation dependency inside the dependencies block
+    // ...existing code...
+}
+
 // ...existing code...
